# PlantProtector

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
components/parameters/: CMakeLists.txt  param_manager.c  param_table.inc  secure_level.c
components/parameters/include/: param_manager.h  secure_level.h
components/peripherals/: adc_manager.c  adc_table.inc  gpio_manager.c  gpio_table.inc
components/peripherals/include/: adc_manager.h  gpio_manager.h
esp-idf/: CMakeLists.txt  README.md
esp-idf/components/esp32_arduino_comm/: CMakeLists.txt  esp32_arduino_comm.c  esp32_arduino_comm.h  hamming.c  idf_component.yml  spi_arduino.c
esp-idf/components/esp32_arduino_comm/include/: esp32_arduino_comm.h  hamming.h
esp-idf/components/ipc/: CMakeLists.txt  comm_commands.inc  esp32_arduino_comm.c  hamming.c  ipc.c  ipc_commands.inc  spi_arduino.c  spi_esp32.c
esp-idf/components/ipc/include/: esp32_arduino_comm.h  hamming.h  ipc.h
esp-idf/components/parameters/: param_manager.c  param_table.inc  secure_level.c
esp-idf/components/parameters/include/: param_manager.h
esp-idf/components/peripherals/: CMakeLists.txt  adc_manager.c  adc_table.inc  gpio_manager.c  gpio_table.inc
esp-idf/components/peripherals/include/: adc_manager.h  gpio_manager.h
esp-idf/main/: CMakeLists.txt  app_main.c  commands.c  commands_registration.c  param_table.inc  parser.c  thermistor.c  wifi.c
esp-idf/main/include/: ascii_art.h  commands_registration.h  parser.h  thermistor.h  wifi.h
main/: CMakeLists.txt  app_main.c  ascii_art.c  commands.c  commands_registration.c  hamming_code.c  hamming_code.h  internet_check.c  internet_check.h  parser.c  spi_arduino.c  spi_esp32.c  thermistor.inc  wifi.c  wifi.h
main/include/: commands.h  commands_registration.h  internet_check.h  parser.h  thermistor.h  wifi.h
platformio/: platformio.ini
platformio/include/: esp32_arduino_comm.h  hamming.h
platformio/src/: hamming.c  main.cpp  main_old.cpp
