idf_component_register(
					SRCS
                        ascii_art.c
                        wifi.c
                        commands_registration.c
                        commands.c
                        app_main.c
                        parser.c
                    INCLUDE_DIRS 
						.
                        ../components/cmd_nvs
                        ../components/cmd_system 
                        ../components/vfs
                        ../components/fatfs
                        ../components/library
                        ../components/parameters
                    REQUIRES 
						console 
						nvs_flash 
						fatfs
					)
