idf_component_register(
					SRCS
                        ascii_art.c
                        wifi.c
                        commands_registration.c
                        commands.c
                        app_main.c
                        parser.c
                        thermistor.c
                    INCLUDE_DIRS 
						.
                        ./include
                        ../components/library
                        ../components/peripherals
                        ../components/peripherals/include
                        ../components/esp32_arduino_comm
                        ../components/esp32_arduino_comm/include
                    REQUIRES 
						console 
					)
