idf_component_register(
                    SRCS 
                        gpio_manager.c
                        adc_manager.c
                    INCLUDE_DIRS 
                        .
                        ./include
                    REQUIRES
                        esp_adc_cal
                    )
